exemplos/dynamicBlocks/dynamicBlock.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "4.52.0"
    }
  }
}

provider "aws" {
  region = "sa-east-1"
}

variable "inboundPorts" {
  type    = list(number)
  description = "list of ingress ports"
  default = [22, 80, 443]
}

resource "aws_security_group" "mySg" {
  name        = "terraform-dynamicSg"
  description = "This was generated by Terraform with a Dynamic Block for the inbound and outbound rules"

  dynamic "ingress" { ################## Definição de um dynamic block
    for_each = var.inboundPorts        # Iteramos pela var inboundPorts
    iterator = ports                   # podemos acessar o valor de cada iteração
                                       # pelo iterator ports (ports.value)
    content {
      from_port   = ports.value
      to_port     = ports.value
      protocol    = "tcp"
      cidr_blocks = [ "222.222.222.222/32" ]
    }
  }
}
